fix: add line break in tooltip

--- a/client/src/app/components/Tooltip.scss
+++ b/client/src/app/components/Tooltip.scss
@@ -18,6 +18,8 @@
         opacity: 0;
         transition: all 250ms;
         right: 0;
+        width: 300px;
+        white-space: break-spaces;
 
         .arrow {
             background: var(--modal-color);
